docs/api/qiskit/0.37/qiskit.circuit.library.DCXGate.mdx
---
title: DCXGate
description: API reference for qiskit.circuit.library.DCXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.DCXGate
---

# DCXGate

<Class id="qiskit.circuit.library.DCXGate" github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/library/standard_gates/dcx.py" signature="DCXGate">
  Bases: [`qiskit.circuit.gate.Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")

  Double-CNOT gate.

  A 2-qubit Clifford gate consisting of two back-to-back CNOTs with alternate controls.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`dcx()`](qiskit.circuit.QuantumCircuit#dcx "qiskit.circuit.QuantumCircuit.dcx") method.

  ```python
            ┌───┐
  q_0: ──■──┤ X ├
       ┌─┴─┐└─┬─┘
  q_1: ┤ X ├──■──
       └───┘
  ```

  This is a classical logic gate, equivalent to a CNOT-SWAP (CNS) sequence, and locally equivalent to an iSWAP.

  $$
  \begin{split}DCX\ q_0, q_1 =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & 0 & 0 & 1 \\
          0 & 1 & 0 & 0 \\
          0 & 0 & 1 & 0
      \end{pmatrix}\end{split}
  $$

  Create new DCX gate.

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.DCXGate.condition_bits" name="condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.DCXGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.DCXGate.definition" name="definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.DCXGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.DCXGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.DCXGate.name" name="name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.DCXGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.DCXGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.DCXGate.params" name="params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.DCXGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

